tests/diagnostics/undefined_variable.stderr
error[E0100]: 未定義の変数です
 --> tests/diagnostics/undefined_variable.kal:2:9
  |
2 | def f() x;
  |         ^
1 個のエラーで中断しました
