tests/diagnostics/undefined_variable.kal
# A function body references a variable that was never defined.
def f() x;
f();
